force-app/main/default/objects/Form_LCF_Setup_Investor_1__c/Form_LCF_Setup_Investor_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund - Full Award Set-Up Form - Investor - 1.0</description>
    <label>Form LCF Setup Investor 1.0</label>
    <nameField>
        <displayFormat>SIN-{00000}</displayFormat>
        <label>Investor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form LCF Setup Investor 1.0</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>