force-app/main/default/objects/Form_LCF_Setup_Investor_1__c/fields/application__c.field-meta.xml
<CustomField>
    <fullName>application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Form LCF Setup Investor 1.0</relationshipLabel>
    <relationshipName>setup_investors</relationshipName>
    <type>Lookup</type>
</CustomField>