force-app/main/default/objects/Form_LCF_Setup_Investor_1__c/fields/in_amount__c.field-meta.xml
<CustomField>
    <fullName>in_amount__c</fullName>
    <inlineHelpText>Amount</inlineHelpText>
    <label>IN - Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>