force-app/main/default/objects/Form_LCF_Setup_Investor_1__c/fields/in_investor_name__c.field-meta.xml
<CustomField>
    <fullName>in_investor_name__c</fullName>
    <inlineHelpText>Name</inlineHelpText>
    <label>IN - Investor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>