force-app/main/default/objects/Form_LCF_Setup_Investor_1__c/fields/in_investor_plus_amount__c.field-meta.xml
<CustomField>
    <fullName>in_investor_plus_amount__c</fullName>
    <formula>RPAD(in_investor_name__c,30,"&amp;nbsp;")&amp;LPAD("£"&amp;TEXT(in_amount__c),10,"&amp;nbsp;")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IN - Investor plus Amount</label>
    <type>Text</type>
</CustomField>